[tool.poetry]
name = "dbcamapproxy"
version = "3.1.2"
description = "DBCA internal MapProxy service application"
authors = ["ASI <asi@dbca.wa.gov.au>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
mapproxy = "3.1.2"
pillow = "11.0.0"
gunicorn = "23.0.0"
pyyaml = "6.0.2"
pyproj = "3.7.0"
lxml = "5.3.0"
shapely = "2.0.6"
azure-storage-blob = "12.24.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.29.0"
setuptools = "^75.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
