[project]
name = "dbcamapproxy"
version = "5.0.0"
description = "DBCA internal MapProxy service application"
authors = [{ name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "mapproxy==5.0.0",
  "gunicorn==23.0.0",
  "azure-storage-blob==12.27.0",
]

[dependency-groups]
dev = ["ipython>=9.4.0"]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]
